--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
 GlobalDefaultGameMode=/Game/Andrey/Main/MainGM.MainGM_C
+EditorStartupMap=/Game/TestLevel.TestLevel
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
