--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
+GameDefaultMap=/Game/Andrey/Levels/TestLevel.TestLevel
 GlobalDefaultGameMode=/Game/Andrey/Main/MainGM.MainGM_C
 EditorStartupMap=/Game/TestLevel.TestLevel
 
