--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Andrey/Levels/TestLevel.TestLevel
+GameDefaultMap=/Game/Andrey/Levels/Level_1.Level_1
 GlobalDefaultGameMode=/Game/Andrey/Main/MainGM.MainGM_C
-EditorStartupMap=/Game/TestLevel.TestLevel
+EditorStartupMap=/Game/Andrey/Levels/Level_1.Level_1
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
